--- a/EGMII.P.I.D/web/bootstrap/css/table-design.css
+++ b/EGMII.P.I.D/web/bootstrap/css/table-design.css
@@ -31,7 +31,7 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
     margin: 0; 
     -webkit-box-sizing:border-box;
-   -moz-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
 
 .readonlyWhite{
@@ -48,9 +48,9 @@ input[type=number]::-webkit-outer-spin-button {
     cursor:default;
 }
 
- .label {
-                font-weight:bold;
-            }
+.label {
+    font-weight:bold;
+}
 .search {
     width:250px;
     height:35px;
@@ -81,4 +81,23 @@ input[type=checkbox]{
 
 .btn {
     width: 100px;
+}
+
+.numericControl{
+    display: block;
+    width: 100%;
+    height: 28px;
+    font-size: 13px;
+    padding: 2px ;
+    line-height: 1.42857143;
+    color: #777777;
+    background-color: #ffffff;
+    background-image: none;
+    border: 1px solid #dddddd;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
